--- a/index.html
+++ b/index.html
@@ -18,11 +18,35 @@
     </div>
     -->
     <div class="wrapper">
-        <header class="header"></header>
-        <div class="main"></div>
-        <div class="side side1"></div>
-        <div class="side side2"></div>
-        <footer class="footer"></footer>
+        <header class="header">
+            <h1>Mamá Canchera</h1>
+        </header>
+        <div class="main">
+            <h2>Tienda</h2>
+            <div class="container">
+                <div class="productos ">
+                    <div>item 1</div>
+                </div>
+                <div class="productos ">
+                    <div>item 2</div>
+                </div>
+                <div class="productos ">
+                    <div>item 3</div>
+                </div>
+                <div class="productos ">
+                    <div>item 4</div>
+                </div>
+            </div>
+        </div>
+        <div class="side side1">
+            <h3>Novedades</h3>
+        </div>
+        <div class="side side2">
+            <h3>Destacados</h3>
+        </div>
+        <footer class="footer">
+            <h4>Envíos - Forma de pago - Whatsapp</h4>
+        </footer>
     </div>
 </body>
 </html>
